; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/igb/extr_igb_ethtool.c_igb_check_lbtest_frame.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/igb/extr_igb_ethtool.c_igb_check_lbtest_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.igb_rx_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.igb_rx_buffer*, i32)* @igb_check_lbtest_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @igb_check_lbtest_frame(%struct.igb_rx_buffer* %0, i32 %1) #0 {
  %3 = alloca %struct.igb_rx_buffer*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.igb_rx_buffer* %0, %struct.igb_rx_buffer** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 1, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = lshr i32 %7, 1
  store i32 %8, i32* %4, align 4
  %9 = load %struct.igb_rx_buffer*, %struct.igb_rx_buffer** %3, align 8
  %10 = getelementptr inbounds %struct.igb_rx_buffer, %struct.igb_rx_buffer* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i8* @kmap(i32 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 3
  %15 = load i8, i8* %14, align 1
  %16 = zext i8 %15 to i32
  %17 = icmp ne i32 %16, 255
  br i1 %17, label %36, label %18

18:                                               ; preds = %2
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %4, align 4
  %21 = add i32 %20, 10
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i8, i8* %19, i64 %22
  %24 = load i8, i8* %23, align 1
  %25 = zext i8 %24 to i32
  %26 = icmp ne i32 %25, 190
  br i1 %26, label %36, label %27

27:                                               ; preds = %18
  %28 = load i8*, i8** %5, align 8
  %29 = load i32, i32* %4, align 4
  %30 = add i32 %29, 12
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds i8, i8* %28, i64 %31
  %33 = load i8, i8* %32, align 1
  %34 = zext i8 %33 to i32
  %35 = icmp ne i32 %34, 175
  br i1 %35, label %36, label %37

36:                                               ; preds = %27, %18, %2
  store i32 0, i32* %6, align 4
  br label %37

37:                                               ; preds = %36, %27
  %38 = load %struct.igb_rx_buffer*, %struct.igb_rx_buffer** %3, align 8
  %39 = getelementptr inbounds %struct.igb_rx_buffer, %struct.igb_rx_buffer* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @kunmap(i32 %40)
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}

declare dso_local i8* @kmap(i32) #1

declare dso_local i32 @kunmap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
